[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "premarket"
version = "0.1.0"
description = "Pre-market Top-N watchlist generator"
requires-python = ">=3.11"
authors = [{name="Quant Agent"}]
dependencies = [
  "pandas",
  "numpy",
  "requests",
  "python-dateutil",
  "pydantic",
  "PyYAML",
  "tenacity",
  "rich"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov"
]

[tool.setuptools]
packages = ["premarket"]

[tool.pytest.ini_options]
addopts = ""
