[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "steadyalpha-screener"
version = "0.2.0"
description = "SteadyAlpha Screener Bot for pre-market Top-N watchlists"
requires-python = ">=3.11"
authors = [{name="Quant Agent"}]
dependencies = [
  "pandas",
  "numpy",
  "requests",
  "python-dateutil",
  "pydantic",
  "PyYAML",
  "tenacity",
  "rich",
  "APScheduler",
  "mysql-connector-python",
  "ulid-py"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov"
]

[tool.setuptools]
packages = ["premarket", "steadyalpha", "steadyalpha.common", "steadyalpha.storage", "bots", "bots.screener"]

[tool.pytest.ini_options]
addopts = ""
